   * When using set_multi and one value is too big, traceback
     TypeError: 'int' object is unsubscriptable
     Patch by Orjan Persson

   * Fixing Bug #529855: Server host can now be bare host without ":<port>".
     Fix proposed by Roger Binns.

   * Fixing Bug #491164: Typo fix, "compession" -> "compRession".

   * Fixing Bug #509712: "TypeError: 'NoneType' object is unsubscriptable"
     Also fixed some other similar code to not have issues with that.

   * Also related to 509712 and 628339: readline() now returns '' instead
     of None when a server dies.  This should be safer.  Patch suggested by
     Denis Otkidach.

   * Fixing Bug #628339: Read from server sometimes fails.  Patch by Jeremy
     Cowles.

   * Fixing Bug #633553: Add stat arguments support to get_stats().  Patch
     by Ryan Lane.

   * Changing the license to the PSF License.

   * Removing Evan's e-mail address at his request, changing authorship to
     Sean.

Sat, 28 Nov 2009 01:07:42 -0700  Sean Reifschneider  <jafo@tummy.com>

   * Version 1.45

   * Per-connection max server key length.  Patch by Nicolas Delaby

   * Patches to make memcached more garbage-collectable.  Removes
     "debugfunc" argument from _Host objects and changed to "debug"
     boolean.  Patches by John McFarlane and Aryeh Katz.

   * Switching to a cmemcache compatible hash function.  Implemented by
     André Cru and Ludvig Ericson.  To switch back to the old style, use:

        memcached.useOldServerHashFunction()

   * Rejecting keys that have spaces in them.  Patch by Etienne Posthumus.

   * Fixing exception raising syntax.  Patch by Samuel Stauffer.

   * Optimizations in read code.  Patch by Samuel Stauffer.

   * Changing classes to be newstyle.  Patch by Samuel Stauffer.

   * Changed "has_key" to "in".  Patch by Samuel Stauffer.

   * incr/decr were raising ValueError if the key did not exist, the
     docstring said it returned none.  Patch by Chihiro Sakatoku.
